--- a/data/org.velvetkeyboad.xharvest.desktop
+++ b/data/org.velvetkeyboad.xharvest.desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Type=Application
-Encoding=UTF-8
 Name=xHarvest
 Comment=Unofficial Harvest Desktop
 Exec=xharvest
 Terminal=false
-Categories=Office
+Categories=GTK;Office;
 Icon=xharvest
+StartupNotify=true
